Add station label settings
